--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+
+    <!-- Normalize -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
+
+    <!-- Main styles -->
     <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +22,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="page-header">
         <div class="header-container container">
             <nav class="header-nav">
@@ -26,6 +33,7 @@
                     <li><a class="menu-link" href="">Contacts</a></li>
                 </ul>
             </nav>
+
             <address class="contacts">
                 <ul class="contacts-list">
                     <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -35,48 +43,46 @@
         </div>
     </header>
 
+    <!-- MAIN -->
     <main>
+        <!-- HERO -->
         <section class="section-hero">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
                 <button class="hero-button" type="button">Order Service</button>
             </div>
         </section>
+
+        <!-- FEATURES -->
         <section class="section-features">
             <div class="container">
                 <h2 class="visually-hidden">Features</h2>
                 <ul class="features-list">
                     <li class="feature-item">
                         <h3 class="feature-title">Strategy</h3>
-                        <p class="feature-text">
-                            Our goal is to identify the business problem to walk away with the
-                            perfect and creative solution.
-                        </p>
+                        <p class="feature-text">Our goal is to identify the business problem to walk away with the
+                            perfect and creative solution.</p>
                     </li>
                     <li class="feature-item">
                         <h3 class="feature-title">Punctuality</h3>
-                        <p class="feature-text">
-                            Bring the key message to the brand's audience for the best price
-                            within the shortest possible time.
-                        </p>
+                        <p class="feature-text">Bring the key message to the brand's audience for the best price within
+                            the shortest possible time.</p>
                     </li>
                     <li class="feature-item">
                         <h3 class="feature-title">Diligence</h3>
-                        <p class="feature-text">
-                            Research and confirm brands with the strongest digital growth
-                            opportunities and minimize risk.
-                        </p>
+                        <p class="feature-text">Research and confirm brands with the strongest digital growth
+                            opportunities and minimize risk.</p>
                     </li>
                     <li class="feature-item">
                         <h3 class="feature-title">Technologies</h3>
-                        <p class="feature-text">
-                            Design practice focused on digital experiences. We bring forth a
-                            deep passion for problem-solving.
-                        </p>
+                        <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
+                            passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
         </section>
+
+        <!-- TEAM -->
         <section class="section-team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
@@ -112,6 +118,8 @@
                 </ul>
             </div>
         </section>
+
+        <!-- PORTFOLIO -->
         <section class="section-portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
@@ -163,6 +171,8 @@
             </div>
         </section>
     </main>
+
+    <!-- FOOTER -->
     <footer class="page-footer">
         <div class="container">
             <a class="footer-logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
