--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
 
     <!-- Main styles -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +28,7 @@
             <nav class="header-nav">
                 <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
                 <ul class="menu-list">
-                    <li><a class="menu-link" href="./index.html">Studio</a></li>
+                    <li><a class="menu-link active" href="./index.html">Studio</a></li>
                     <li><a class="menu-link" href="">Portfolio</a></li>
                     <li><a class="menu-link" href="">Contacts</a></li>
                 </ul>
@@ -36,8 +36,12 @@
 
             <address class="contacts">
                 <ul class="contacts-list">
-                    <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li>
+                        <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
                 </ul>
             </address>
         </div>
@@ -59,30 +63,56 @@
                 <h2 class="visually-hidden">Features</h2>
                 <ul class="features-list">
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Strategy</h3>
-                        <p class="feature-text">Our goal is to identify the business problem to walk away with the
-                            perfect and creative solution.</p>
+                        <p class="feature-text">
+                            Our goal is to identify the business problem to walk away with
+                            the perfect and creative solution.
+                        </p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Punctuality</h3>
-                        <p class="feature-text">Bring the key message to the brand's audience for the best price within
-                            the shortest possible time.</p>
+                        <p class="feature-text">
+                            Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.
+                        </p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Diligence</h3>
-                        <p class="feature-text">Research and confirm brands with the strongest digital growth
-                            opportunities and minimize risk.</p>
+                        <p class="feature-text">
+                            Research and confirm brands with the strongest digital growth
+                            opportunities and minimize risk.
+                        </p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Technologies</h3>
-                        <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
-                            passion for problem-solving.</p>
+                        <p class="feature-text">
+                            Design practice focused on digital experiences. We bring forth a
+                            deep passion for problem-solving.
+                        </p>
                     </li>
                 </ul>
             </div>
         </section>
-
-        <!-- TEAM -->
         <section class="section-team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
@@ -125,43 +155,79 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+                        <div class="portfolio-cover">
+                            <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+                            <p class="portfolio-text">
+                                14-day analytics dashboard that provides data visualization,
+                                tracking and reporting functionality.
+                            </p>
+                        </div>
                         <div class="portfolio-info">
                             <h3 class="portfolio-name">Banking App</h3>
                             <p class="portfolio-type">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
+                        <div class="portfolio-cover">
+                            <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
+                            <p class="portfolio-text">
+                                Payment gateway with optimized user flow for online
+                                transactions and mobile payments.
+                            </p>
+                        </div>
                         <div class="portfolio-info">
                             <h3 class="portfolio-name">Cashless Payment</h3>
                             <p class="portfolio-type">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
+                        <div class="portfolio-cover">
+                            <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
+                            <p class="portfolio-text">
+                                Relaxation and wellness application with personalized
+                                meditation plans.
+                            </p>
+                        </div>
                         <div class="portfolio-info">
                             <h3 class="portfolio-name">Meditation App</h3>
                             <p class="portfolio-type">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
+                        <div class="portfolio-cover">
+                            <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
+                            <p class="portfolio-text">
+                                Mobile ride-sharing app integrating maps, payment and rating
+                                systems.
+                            </p>
+                        </div>
                         <div class="portfolio-info">
                             <h3 class="portfolio-name">Taxi Service</h3>
                             <p class="portfolio-type">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360"
-                            height="300" />
+                        <div class="portfolio-cover">
+                            <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360"
+                                height="300" />
+                            <p class="portfolio-text">
+                                Custom digital illustrations created for branding and UI/UX
+                                projects.
+                            </p>
+                        </div>
                         <div class="portfolio-info">
                             <h3 class="portfolio-name">Screen Illustrations</h3>
                             <p class="portfolio-type">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" />
+                        <div class="portfolio-cover">
+                            <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" />
+                            <p class="portfolio-text">
+                                Educational platform with interactive video lessons and user
+                                progress tracking.
+                            </p>
+                        </div>
                         <div class="portfolio-info">
                             <h3 class="portfolio-name">Online Courses</h3>
                             <p class="portfolio-type">Marketing</p>
@@ -171,14 +237,49 @@
             </div>
         </section>
     </main>
-
-    <!-- FOOTER -->
     <footer class="page-footer">
-        <div class="container">
-            <a class="footer-logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+        <div class="footer-container container">
+            <div class="footer-brand">
+                <a class="footer-logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with
+                    digital marketing &amp; growth solutions.
+                </p>
+            </div>
+
+            <div class="footer-social">
+                <p class="footer-social-title">Social media</p>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://www.instagram.com/" aria-label="Instagram">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://twitter.com/" aria-label="Twitter">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://www.facebook.com/" aria-label="Facebook">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://www.linkedin.com/" aria-label="LinkedIn">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-in"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
