--- a/index.html
+++ b/index.html
@@ -117,39 +117,105 @@
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
+                    <!-- Картка 1 -->
                     <li class="team-item">
-                        <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+                        <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" />
                         <div class="team-info">
                             <h3 class="team-name">Mark Guerrero</h3>
                             <p class="team-role">Product Designer</p>
+                            <ul class="social-list">
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
+
+                    <!-- Картка 2 -->
                     <li class="team-item">
-                        <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
+                        <img src="./images/tom-ford.jpg" alt="Tom Ford" />
                         <div class="team-info">
                             <h3 class="team-name">Tom Ford</h3>
                             <p class="team-role">Frontend Developer</p>
+                            <ul class="social-list">
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
+                        <img src="./images/camila-garcia.jpg" alt="Camila Garcia" />
                         <div class="team-info">
                             <h3 class="team-name">Camila Garcia</h3>
                             <p class="team-role">Marketing</p>
+                            <ul class="social-list">
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
+                                    
                         </div>
                     </li>
+    
                     <li class="team-item">
-                        <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+                        <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" />
                         <div class="team-info">
                             <h3 class="team-name">Daniel Wilson</h3>
                             <p class="team-role">UI Designer</p>
+                            <ul class="social-list">
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg></a></li>
+                                <li class="social-item"><a class="social-link" href="#"><svg class="social-icon" width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-
-        <!-- PORTFOLIO -->
         <section class="section-portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
@@ -158,8 +224,8 @@
                         <div class="portfolio-cover">
                             <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
                             <p class="portfolio-text">
-                                14-day analytics dashboard that provides data visualization,
-                                tracking and reporting functionality.
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App
                             </p>
                         </div>
                         <div class="portfolio-info">
@@ -171,8 +237,8 @@
                         <div class="portfolio-cover">
                             <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
                             <p class="portfolio-text">
-                                Payment gateway with optimized user flow for online
-                                transactions and mobile payments.
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
                             </p>
                         </div>
                         <div class="portfolio-info">
@@ -184,8 +250,8 @@
                         <div class="portfolio-cover">
                             <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
                             <p class="portfolio-text">
-                                Relaxation and wellness application with personalized
-                                meditation plans.
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App
                             </p>
                         </div>
                         <div class="portfolio-info">
@@ -197,8 +263,8 @@
                         <div class="portfolio-cover">
                             <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
                             <p class="portfolio-text">
-                                Mobile ride-sharing app integrating maps, payment and rating
-                                systems.
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App
                             </p>
                         </div>
                         <div class="portfolio-info">
@@ -211,8 +277,8 @@
                             <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360"
                                 height="300" />
                             <p class="portfolio-text">
-                                Custom digital illustrations created for branding and UI/UX
-                                projects.
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
                             </p>
                         </div>
                         <div class="portfolio-info">
@@ -224,8 +290,8 @@
                         <div class="portfolio-cover">
                             <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" />
                             <p class="portfolio-text">
-                                Educational platform with interactive video lessons and user
-                                progress tracking.
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App
                             </p>
                         </div>
                         <div class="portfolio-info">
