--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <li class="footer-social-item">
                         <a class="footer-social-link" href="https://www.linkedin.com/" aria-label="LinkedIn">
                             <svg class="footer-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-in"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
